--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 <body>
   <div ui-view="navbar"></div>
+  <!-- main view => '' -->
   <div class="container" ui-view>
     <div class="row">
       <div class="col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-4">
@@ -30,10 +31,6 @@
         </div>
       </div>
     </div>
-    <!-- NavBarController -->
-    <!-- LinksController -->
-    <!-- AddController -->
-    <!-- TorrentController -->
   </div>
 </body>
 </html>
