--- a/src/navbar/logged.tpl.html
+++ b/src/navbar/logged.tpl.html
@@ -6,7 +6,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="#">AllDebrid</a>
+    <a class="navbar-brand" href="#" ui-sref="home.torrents">AllDebrid</a>
     <a class="navbar-brand" ng-show="navbar.ajax">
       <span class="glyphicon glyphicon-refresh glyphicon-spin"></span>
       <span>loading</span>
@@ -17,6 +17,9 @@
     <ul class="nav navbar-nav">
       <li>
         <a>{{ navbar.page() }}</a>
+      </li>
+      <li>
+        <a href="#" ui-sref="home.links">links</a>
       </li>
       <li>
         <!-- Spinner -->
