--- a/src/user/login.tpl.html
+++ b/src/user/login.tpl.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-6 col-md-4 col-md-offset-4">
+  <div class="col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
     <div class="panel panel-default">
       <div class="panel-heading">
         <strong>Alldebrid Login</strong>
