unrestricting links works :)

--- a/src/navbar/logged.tpl.html
+++ b/src/navbar/logged.tpl.html
@@ -19,7 +19,7 @@
         <a>{{ navbar.page() }}</a>
       </li>
       <li>
-        <a href="#" ui-sref="home.links">links</a>
+        <a href="#" ui-sref="home.unrestrict">links</a>
       </li>
       <li>
         <!-- Spinner -->
