magnet add is gonna be inside the navbar

--- a/src/unrestrict/from-torrent.tpl.html
+++ b/src/unrestrict/from-torrent.tpl.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div>
+    <!-- REMINDER: unrestrict links on demand, not only from torrents! -->
     <!-- <form role="form"></form> -->
       <!-- <div class="form-group">
         <label>Links to request</label>
