--- a/src/footer/footer.tpl.html
+++ b/src/footer/footer.tpl.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="container">
-    <span ng-show="footer.blobSupport">
+    <p ng-show="footer.blobSupport && footer.win10">
       <b>Want to handle magnet URI?</b> Fix Windows 10 magnet URI handling <a ng-href="{{ footer.regeditURL }}" target="_blank" download="magnet.reg">with this reg file</a>
-    </span>
+    </p>
   </div>
 </footer>
