git revision is now written inside the footer

--- a/src/footer/footer.tpl.html
+++ b/src/footer/footer.tpl.html
@@ -4,4 +4,7 @@
       <b>Want to handle magnet URI?</b> Fix Windows 10 magnet URI handling <a ng-href="{{ footer.regeditURL }}" target="_blank" download="magnet.reg">with this reg file</a>
     </p>
   </div>
+  <div class="container">
+    <p class="text-muted">version: {{ footer.version }}</p>
+  </div>
 </footer>
