footer version is now clickable and sends directly to github

--- a/src/footer/footer.tpl.html
+++ b/src/footer/footer.tpl.html
@@ -5,6 +5,6 @@
     </p>
   </div>
   <div class="container">
-    <p class="text-muted">version: {{ footer.version }}</p>
+    <p class="text-muted">version: <a ng-href="https://github.com/colthreepv/alldebrid/commit/{{ footer.version }}">{{ footer.version }}</a></p>
   </div>
 </footer>
