--- a/src/torrent/torrent.tpl.html
+++ b/src/torrent/torrent.tpl.html
@@ -1,26 +1,8 @@
 <div>
   <div class="row">
-    <div class="col-md-8">
+    <div class="col-xs-12">
       <form class="form-inline">
-        <div class="checkbox desktop">
-          <span>Forever </span><input type="checkbox" ng-model="torrent.forever" ng-click="checkForever()">
-        </div>
-        <div class="form-group desktop">
-          <select ng-model="torrent.cooldown">
-            <option value="30000">30 sec</option>
-            <option value="15000">15 sec</option>
-            <option value="10000">10 sec</option>
-            <option value="5000">5 sec</option>
-          </select>
-        </div>
-        <div class="form-group desktop">
-          <button class="btn btn-xs btn-danger" ng-disabled="!torrent.checked.length || torrent.removing" ng-click="torrent.removeChecked()">
-            remove selected <span class="glyphicon glyphicon-refresh glyphicon-spin" ng-show="torrent.removing"></span>
-          </button>
-          <button class="btn btn-xs btn-info" ng-disabled="!torrent.checked.length" ng-click="torrent.generateLinks()">generate links</button>
-          <button class="btn btn-xs btn-default" ng-disabled="!torrent.checked.length" ng-click="torrent.deselect()">clear selection</button>
-        </div>
-        <div class="row mobile">
+        <div class="row">
           <div class="btn-group btn-group-justified" role="group" aria-label="...">
             <div class="btn-group">
               <button class="btn btn-md btn-danger" ng-disabled="!torrent.checked.length || torrent.removing" ng-click="torrent.removeChecked()">
@@ -33,18 +15,15 @@
             <div class="btn-group">
               <button class="btn btn-md btn-default" ng-disabled="!torrent.checked.length" ng-click="torrent.deselect()">deselect</button>
             </div>
+            <div class="btn-group">
+              <a class="btn btn-md btn-link disabled" ng-show="torrent.db.length">{{ torrent.db.length }} torrents</a>
+            </div>
           </div>
         </div>
       </form>
     </div>
-    <div class="col-md-2">
-      <span class="pull-right" ng-show="torrentStatus === 'working'">Updating <span class="glyphicon glyphicon-refresh glyphicon-spin"></span></span>
-    </div>
-    <div class="col-md-2">
-      <span class="pull-right" ng-show="!!torrent.db.length">{{ torrent.db.length }} torrents</span>
-    </div>
   </div>
-  <div class="row" ng-show="!!torrent.db.length">
+  <div class="row" ng-show="torrent.db.length">
     <table class="table torrents">
       <thead>
         <tr>
